@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-01T02:26:13Z",
+  "timestamp" : "2022-10-01T08:27:47Z",
   "count_outdated" : 2453,
   "uniques_outdated" : 614,
-  "count" : 2495,
-  "uniques" : 639,
+  "count" : 2496,
+  "uniques" : 640,
   "clones" : [
     {
       "timestamp": "2022-09-17T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-09-30T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
