@@ -1,5 +1,5 @@
 {
-  "count": 42,
+  "count": 43,
   "uniques": 10,
   "clones": [
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2022-09-30T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-01T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
