@@ -1,3 +1,11 @@
+2022-10-01T08:27:47Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3163827908
+* notice: last 14d: unq all: 10 43
+* notice: prev accum: outdated-unq outdated-all / unq all: 614 2453 / 639 2495
+* notice: next accum: outdated-unq outdated-all / unq all: 614 2453 / 640 2496
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-01]
+
 2022-10-01T02:26:13Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3162843575
 * notice: last 14d: unq all: 10 42
